--- a/assignments/assignment_2.ipynb
+++ b/assignments/assignment_2.ipynb
@@ -13,7 +13,9 @@
    "id": "58cd559f-d05f-47b8-9d63-ce554db5f7b4",
    "metadata": {},
    "source": [
-    "## Overview"
+    "## Overview\n",
+    "\n",
+    "The bread and butter of utilizing SQL is writing queries. "
    ]
   },
   {
@@ -35,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -49,7 +51,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+   }
   }
  },
  "nbformat": 4,
