--- a/modules/module_2.ipynb
+++ b/modules/module_2.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import sqlite3\n",
     "\n",
-    "connection = sqlite3.connect(\"../data/cdeschools.sqlite\")\n",
+    "connection = sqlite3.connect(\"cdeschools.sqlite\")\n",
     "cursor = connection.cursor()"
    ]
   },
