--- a/modules/module_3.ipynb
+++ b/modules/module_3.ipynb
@@ -26,7 +26,7 @@
     "import sqlite3\n",
     "import pandas as pd\n",
     "\n",
-    "connection = sqlite3.connect(\"../data/cdeschools.sqlite\")\n",
+    "connection = sqlite3.connect(\"cdeschools.sqlite\")\n",
     "cursor = connection.cursor()"
    ]
   },
